kubernetes/basics/step4-ingress-fastapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
      - name: helloworld
        image: yuyatinnefeld/fastapi:latest
        ports:
        - containerPort: 80
