kubernetes/basics/step4-ingress-fastapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minikube-ingress
spec:
  rules:
  - host: helloworld.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: helloworld
            port:
              number: 80
